<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotelagency.ui.home.HomeFragment"
        android:label="@string/header_title"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.hotelagency.ui.about_us.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/about_us_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hotelagency.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/gallery_fragment" />

    <fragment
        android:id="@+id/nav_book_hotel"
        android:name="com.example.hotelagency.ui.book_hotel.BookHotelFragment"
        android:label="@string/menu_book_hotel"
        tools:layout="@layout/book_hotel_fragment" />
</navigation>